# hufs-get-personal-info

./: .gitignore  README.md  main.py  pyproject.toml
worker/: crawling.py  driver.py  errors.py  sql.py
